--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,19 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Excel Analytics Platform - Transform Data into Beautiful Charts</title>
     <meta name="description" content="Excel Analytics Platform - Upload Excel files and create beautiful 2D & 3D charts with AI-powered insights" />
-    <meta name="author" content="Lovable" />
+    <meta name="author" content="Shantanu Mishra" />
 
-    <meta property="og:title" content="Excel Analytics Platform" />
-    <meta property="og:description" content="Transform your Excel data into beautiful charts with AI-powered insights" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
-
-
   </head>
 
   <body>
